[package]
name = "node"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ledger-types = { path = "../ledger-types" }
ledger-transport = { path = "../ledger-transport" }

k256 = { workspace = true }
rand = { workspace = true }
names = { workspace = true }
clap = { workspace = true, features = ["derive"] }
serde = { workspace = true }
